--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Tomography</title>
+		<title>Tomography simulator</title>
 		<script type="text/javascript" src="complex_array.js"></script>
 		<script type="text/javascript" src="fft.js"></script>
 		<script type="text/javascript" src="graph.js"></script>
